[project]
name = "MOURAG"
version = "0.1.0"
description = "Retrieval Search for MOUs"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.127.0",
    "fastembed>=0.7.4",
    "streamlit>=1.40.0",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "MOURAG",
]
